[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toolkit-gui"
version = "0.1.0"
description = "Digital forensics toolkit GUI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.6"
]

[project.scripts]
toolkit-gui = "toolkit.gui:main"

[tool.setuptools.packages.find]
where = ["src"]
